--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,12 +14,17 @@
         <h1>
             Website Design by Steven Light
         </h1>
-<!--        <p>Welcome to the site hub mockup</p>-->
         <article>
             <figure>
-                <img src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/leisa_christmas_false_color.png"
-                     alt="figure" >
-                <figcaption>A figure</figcaption>
+                <div>
+                    <img src="/images/aweful.png"
+                         alt="aweful.png" >
+                </div>
+                <figcaption>
+                    <p>
+                        An awful website
+                    </p>
+                </figcaption>
             </figure>
             <div>
                 <h3>Title</h3>
@@ -28,9 +33,15 @@
         </article>
         <article>
             <figure>
-                <img src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/leisa_christmas_false_color.png"
-                     alt="figure" >
-                <figcaption>A figure</figcaption>
+                <div>
+                    <img src="/images/better.png"
+                         alt="a better website" >
+                </div>
+                <figcaption>
+                    <p>
+                        A better website
+                    </p>
+                </figcaption>
             </figure>
             <div>
                 <h3>Title</h3>
@@ -39,9 +50,15 @@
         </article>
         <article>
             <figure>
-                <img src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/leisa_christmas_false_color.png"
-                     alt="figure" >
-                <figcaption>A figure</figcaption>
+                <div>
+                    <img src="https://www.nasa.gov/sites/default/files/styles/image_card_4x3_ratio/public/thumbnails/image/leisa_christmas_false_color.png"
+                         alt="test image" >
+                </div>
+                <figcaption>
+                    <p>
+                        A test image
+                    </p>
+                </figcaption>
             </figure>
             <div>
                 <h3>Title</h3>
