--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,9 +3,9 @@
         <table id="contactInfo">
             <tbody>
                 <tr>
-                    <td>mail@mail.com</td>
-                    <td>linkedIn.com</td>
-                    <td>(555)555-5555</td>
+                    <td>stevelight16@gmail.com</td>
+                    <td><a href="https://www.linkedin.com/in/steve-light-5619a542/">My LinkedIn Profile</a></td>
+                    <td>(909) 965-6720</td>
                 </tr>
             </tbody>
         </table>
