--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
             </li>
             <% if (page==='home'){%>
             <li  class="currentPage">
-                <a href="#" >
+                <a>
                     <div>
                         <p>Home</p>
                     </div>
@@ -32,7 +32,7 @@
             <%}%>
             <% if (page==='gallery'){%>
             <li  class="currentPage">
-                <a href="#" >
+                <a>
                     <div>
                         <p>Gallery</p>
                     </div>
@@ -40,7 +40,8 @@
             </li>
             <% } else {%>
             <li  class="">
-                <a wip href="/gallery" title="work in progress">
+                <!--       href="/gallery"         -->
+                <a wip  title="work in progress" >
                     <div>
                         <p>Gallery</p>
                     </div>
@@ -49,7 +50,7 @@
             <%}%>
             <% if (page==='design'){%>
             <li  class="currentPage">
-                <a href="#" >
+                <a>
                     <div>
                         <p>Mockups</p>
                     </div>
@@ -66,7 +67,7 @@
             <%}%>
             <% if (page==='about'){%>
             <li  class="currentPage">
-                <a href="#" >
+                <a>
                     <div>
                         <p>About</p>
                     </div>
