--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -406,7 +406,7 @@ body
                     color inherit
 
 a
-    color #7ec13f
+    color linkColor1
     text-decoration none
     &:hover
-        color: linkColor1
+        color: linkColor2
