--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,10 +14,26 @@
         <h1 class="">
             About Light Designs
         </h1>
-        <p>Utah based designer/developer</p>
-        <p>Graduate of Neumont University, with a Bachelor's of Science in Web Design and Development</p>
-        <p>Versed in back-end and front-end implementation</p>
-        <p>If you would like to contact me with offers, please use my email to set up a phone call.</p>
+        <article style="display: none;"></article>
+        <article>
+            <figure>
+                <div>
+                    <img src="/images/better.png"
+                         alt="a better website" >
+                </div>
+                <figcaption>
+                    <p>
+                        A better website
+                    </p>
+                </figcaption>
+            </figure>
+            <div>
+                <p>Utah based designer/developer<br/>
+                Graduate of Neumont University, with a Bachelor's of Science in Web Design and Development<br/>
+                Versed in back-end and front-end implementation<br/>
+                If you would like to contact me with offers, please use my email to set up a phone call.</p>
+            </div>
+        </article>
     </main>
     <% include partials/footer%>
 </body>
