--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,8 +14,7 @@
         <h1 class="">
             About Light Designs
         </h1>
-        <article style="display: none;"></article>
-        <article>
+        <article class="<%= page%>">
             <figure>
                 <div>
                     <img src="/images/better.png"
@@ -28,9 +27,10 @@
                 </figcaption>
             </figure>
             <div>
-                <p>Utah based designer/developer<br/>
-                Graduate of Neumont University, with a Bachelor's of Science in Web Design and Development<br/>
-                Versed in back-end and front-end implementation<br/>
+                <p>locally Utah based designer and developer<br/>
+                Neumont University graduate<br/>
+                holder of a Bachelor's of Science in Web Design and Development<br/>
+                Versed in back-end development and front-end design<br/>
                 If you would like to contact me with offers, please use my email to set up a phone call.</p>
             </div>
         </article>
