--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,8 @@
 <footer>
     <div>
-        <table id="contactInfo">
-            <tbody>
-                <tr>
-                    <td>stevelight16@gmail.com</td>
-                    <td><a href="https://www.linkedin.com/in/steve-light-5619a542/">My LinkedIn Profile</a></td>
-                    <td>(909) 965-6720</td>
-                </tr>
-            </tbody>
-        </table>
+        
+        <p><a href="mailto:stevelight16@gmail.com">my E-mail address</a></p>
+        <p><a href="https://www.linkedin.com/in/steve-light-5619a542/">My LinkedIn profile</a></p>        
     </div>
     <div>
         <p>
