--- a/views/design/index.ejs
+++ b/views/design/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%= title %>
+        S.Light Design | <%= page %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/<%=stylesheet%>.css' />
