--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%= page %>
+        S.Light Design | <%= page %>
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
