green site changes
Added styles for green site
fixed crappy routing URLs for the mockup site router and partial
removed redundant information in design router

--- a/views/design/green/index.ejs
+++ b/views/design/green/index.ejs
@@ -5,8 +5,7 @@
     <title>
         <%= title %>
     </title>
-    <!--    <link rel='stylesheet' href='/stylesheets/style.css' />-->
-    <link rel='stylesheet' href='/stylesheets/<%=stylesheet%>.css' />
+    <link rel='stylesheet' href='/stylesheets/design/<%=site%>.css' />
 </head>
 
 <body>
@@ -16,7 +15,7 @@
             <%= title %>
         </h1>
         <p>Welcome to the green site</p>
-        <a href="./green">site</a>
+        <a href="./green/index">site</a>
     </main>
     <footer></footer>
 </body>
