--- a/views/design/index.ejs
+++ b/views/design/index.ejs
@@ -16,7 +16,7 @@
         <p>The below websites offer examples of my skills in responsive web design with a variety of website templates</p>
         <p>Each sub-site has a theme </p>
         <div>
-            <a href="site/green">Green</a>
+            <a href="site/green/index">Green</a>
             <p>A site that is solely shades of green no template used</p>
         </div>
     </main>
