--- a/views/design/partials/header.ejs
+++ b/views/design/partials/header.ejs
@@ -24,7 +24,7 @@
                 <% if (homeClass === 'currentPage'){%>
                 <a href="#">
                 <%} else {%>
-                <a href="index">
+                <a href="./index">
                 <%}%>
                     <div>
                         <p>Home</p>
@@ -35,7 +35,7 @@
                 <% if (aboutClass === 'currentPage'){%>
                 <a href="#">
                 <%} else {%>
-                <a href="about">
+                <a href="./about">
                 <%}%>
                     <div>
                         <p>About</p>
@@ -46,7 +46,7 @@
                 <% if (contentClass === 'currentPage'){%>
                 <a href="#">
                 <%} else {%>
-                <a href="content">
+                <a href="./content">
                 <%}%>
                     <div>
                         <p>Content</p>
