--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -321,7 +321,9 @@ body main > article > figure {
 }
 body main > article > figure > div {
   height: 80%;
+  max-height: 190px;
   width: 100%;
+  max-width: 470px;
   display: inline-flex;
   justify-content: center;
 }
