--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -384,7 +384,9 @@ body
                 position relative
                 > div
                     height 80%
+                    max-height 190px
                     width 100%
+                    max-width 470px
                     display inline-flex
                     justify-content center
                     > img
