--- a/views/design/green/content.ejs
+++ b/views/design/green/content.ejs
@@ -5,8 +5,7 @@
     <title>
         <%= title %>
     </title>
-    <!--    <link rel='stylesheet' href='/stylesheets/style.css' />-->
-    <link rel='stylesheet' href='/stylesheets/<%=stylesheet%>.css' />
+    <link rel='stylesheet' href='/stylesheets/design/<%=site%>.css' />
 </head>
 
 <body>
